<resources>
    <string name="app_name">MeetU</string>

    <!-- login -->
    <string name="login_app_explain">편리한 약속 잡기</string>
    <string name="login_hint_id">아이디 입력</string>
    <string name="login_hint_password">비밀번호 입력</string>
    <string name="login_sign_in">로그인</string>
    <string name="login_sign_up">회원가입</string>

    <!--  main  -->
    <string name="main_input_code">코드 입력</string>
    <string name="main_before_vote">투표 전</string>
    <string name="main_vote_ing">투표 중</string>
    <string name="main_after_vote">투표 완료</string>
        <!--api 연동후 타입에 맞게 변경 필요-->
    <string name="main_room_date">2023.03.23 – 04.23</string>
    <string name="main_room_code">code : %d</string>

    <!-- menu  -->
    <string name="setting">환경설정</string>
    <string name="alarm">알림</string>

    <!-- sign up -->
    <string name="sign_up_profile_image">프로필사진</string>
    <string name="sign_up_nickname">닉네임</string>
    <string name="sign_up_nickname_rule">영문 대소문, 한글만 포함하여 2~20글자로 가능(자음, 모음만 X)</string>
    <string name="sign_up_id">아이디</string>
    <string name="sign_up_id_rule">영문대소문자와 숫자만 포함하여 4~15글자로 가능</string>
    <string name="sign_up_password">비밀번호</string>
    <string name="sign_up_password_rule">영문 대소문, 숫자, 특수문자만 포함하여 8~15글자</string>
    <string name="sign_up_password_confirm">비밀번호 확인</string>
    <string name="sign_up_password_confirm_hint">비밀번호를 한번더 입력해 주세요.</string>
    <string name="sign_up_is_duplicate">중복확인</string>
    <string name="sign_up_complete">가입 완료</string>

    <!-- generate room -->
    <string name="generate_room_title">방 생성</string>
    <string name="generate_room_name">방 이름</string>
    <string name="generate_room_input_name">방이름을 입력하세요</string>
    <string name="generate_room_count">인원</string>
    <string name="generate_room_date">약속 날짜</string>
    <string name="generate_room_start_and_end_date">%s ~ %s</string>
    <string name="generate_room_memo">메모</string>
    <string name="generate_room_input_memo">메모를 입력하세요</string>

    <string-array name="generate_room_input_count_array">
        <item>2명</item>
        <item>3명</item>
        <item>4명</item>
        <item>5명</item>
        <item>6명</item>
        <item>7명</item>
        <item>8명</item>
        <item>9명</item>
        <item>10명</item>
    </string-array>

    <string name="date_picker_confirm">확인</string>

</resources>
