<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.team2127.presentation.ui.login.sign_up.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tool_bar_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:background="@color/white"
            app:title="@string/login_sign_up"
            app:titleCentered="true"
            app:navigationIcon="@drawable/ic_left_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <View
            android:id="@+id/view_sign_up_tool_bar_line"
            android:layout_width="110dp"
            android:layout_height="1dp"
            android:background="@color/normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar_sign_up"/>

        <TextView
            android:id="@+id/tv_sign_up_profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/b3"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up_profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_sign_up_tool_bar_line"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_sign_up_profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_basic_profile_image"
            android:scaleType="centerCrop"
            app:shapeAppearance="@style/ShapeableImageViewCircle"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_profile_image"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@tools:sample/avatars"/>

        <ImageButton
            android:id="@+id/btn_sign_up_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_camera_orange"
            app:layout_constraintEnd_toEndOf="@id/iv_sign_up_profile_image"
            app:layout_constraintBottom_toBottomOf="@+id/iv_sign_up_profile_image"

        <TextView
            android:id="@+id/tv_sign_up_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/b3"
            android:text="@string/sign_up_nickname"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@+id/iv_sign_up_profile_image"
            app:layout_constraintStart_toEndOf="@+id/iv_sign_up_profile_image"/>

        <EditText
            android:id="@+id/et_sign_up_input_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/b3"
            android:hint="@string/sign_up_nickname_rule"
            android:textColorHint="@color/hint"
            android:background="@drawable/corners_all_5"
            android:backgroundTint="@color/alternative"
            android:includeFontPadding="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintStart_toEndOf="@+id/iv_sign_up_profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_nickname"/>

        <TextView
            android:id="@+id/tv_sign_up_id"
            style="@style/b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_sign_up_profile_image" />

        <EditText
            android:id="@+id/et_sign_up_input_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/b3"
            android:hint="@string/sign_up_id_rule"
            android:textColorHint="@color/hint"
            android:background="@drawable/corners_all_5"
            android:backgroundTint="@color/alternative"
            android:includeFontPadding="false"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id"
            app:layout_constraintEnd_toStartOf="@+id/btn_sign_up_is_duplicate"/>

        <Button
            android:id="@+id/btn_sign_up_is_duplicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/d3"
            android:textColor="@color/white"
            android:text="@string/sign_up_is_duplicate"
            android:background="@drawable/corners_all_5"
            android:includeFontPadding="false"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_sign_up_input_id"
            app:layout_constraintBottom_toBottomOf="@+id/et_sign_up_input_id"/>

        <TextView
            android:id="@+id/tv_sign_up_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/b3"
            android:text="@string/sign_up_password"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_up_is_duplicate"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_sign_up_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/b3"
            android:hint="@string/sign_up_password_rule"
            android:textColorHint="@color/hint"
            android:background="@drawable/corners_all_5"
            android:backgroundTint="@color/alternative"
            android:layout_marginTop="12dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_sign_up_password_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/b3"
            android:text="@string/sign_up_password_confirm"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_input_password"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_sign_up_input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/b3"
            android:hint="@string/sign_up_password_confirm_hint"
            android:textColorHint="@color/hint"
            android:background="@drawable/corners_all_5"
            android:backgroundTint="@color/alternative"
            android:layout_marginTop="12dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_password_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_sign_up_complete"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            style="@style/b1"
            android:text="@string/sign_up_complete"
            android:textColor="@color/white"
            android:background="@drawable/corners_all_30"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_sign_up_input_password_confirm"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
