<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.team2127.presentation.ui.login.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.login.LoginFragment">

        <ImageView
            android:id="@+id/iv_login_main_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_meetu_main_logo_color"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_login_app_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:text="@string/login_app_explain"
            android:includeFontPadding="false"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_main_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_login_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_app_explain" />

        <EditText
            android:id="@+id/et_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/b3"
            android:hint="@string/login_hint_id"
            android:textColorHint="@color/hint"
            android:textColor="@color/black"
            android:background="@drawable/corners_all_10_stroke"
            android:inputType="text"
            android:text="@={vm.inputId}"
            android:paddingStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_app_name" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/b3"
            android:inputType="textPassword"
            android:hint="@string/login_hint_password"
            android:textColorHint="@color/hint"
            android:textColor="@color/black"
            android:background="@drawable/corners_all_10_stroke"
            android:text="@={vm.inputPassword}"
            android:paddingStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login_id" />

        <Button
            android:id="@+id/btn_login_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/b1"
            android:text="@string/login_sign_in"
            android:textColor="@color/white"
            android:background="@drawable/corners_all_10"
            app:backgroundTint="@color/secondary"
            android:includeFontPadding="false"
            android:onClickListener="@{() -> vm.login()}"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

        <Button
            android:id="@+id/btn_login_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/b1"
            android:text="@string/login_sign_up"
            android:textColor="@color/black"
            app:background="@drawable/corners_all_10_stroke"
            app:backgroundTint="@color/white"
            android:includeFontPadding="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_sign_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
