<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/corners_all_10"
        android:backgroundTint="@color/white"
        android:clipToOutline="true">


        <TextView
            android:id="@+id/tv_item_main_room_title"
            style="@style/h1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:includeFontPadding="false"
            app:layout_constraintEnd_toStartOf="@+id/btn_item_main_room_delete"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="방 이름은 적당히 짧게 알아서 잘 딱 깔금하게" />

        <Button
            android:id="@+id/btn_item_main_room_delete"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:background="@drawable/ic_delete_circle"
            app:backgroundTint="@color/alternative"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_item_main_room_memo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/b3"
            android:maxLines="1"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_main_room_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_item_main_room_memo_more"
            tools:text="메모를 더 보고 싶으면 옆에 더보기를 눌러주세요. 누르면 진짜로 보여요"/>

        <Button
            android:id="@+id/btn_item_main_room_memo_more"
            android:layout_width="15dp"
            android:layout_height="8dp"
            android:background="@drawable/ic_down_orange"
            android:layout_marginEnd="28dp"
            app:layout_constraintTop_toTopOf="@+id/tv_item_main_room_memo"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_main_room_memo"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_item_main_room_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/b3"
            android:text="@string/main_room_date"
            android:includeFontPadding="false"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_main_room_memo"/>

        <TextView
            android:id="@+id/tv_item_main_room_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/b3"
            android:text="@string/main_room_code"
            android:includeFontPadding="false"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_main_room_memo"/>

        <View
            android:id="@+id/view_item_main_room_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/normal"
            android:layout_marginTop="12dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_main_room_date"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_item_main_room_friend_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toBottomOf="@id/view_item_main_room_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/item_round_profile"
            tools:itemCount="3"/>

        <TextView
            android:id="@+id/tv_item_main_room_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/b2"
            android:text="@string/main_before_vote"
            android:includeFontPadding="false"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/rv_item_main_room_friend_profile"
            app:layout_constraintBottom_toBottomOf="@id/rv_item_main_room_friend_profile"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
